# trapper

./: .gitignore  README.md  cabal.project  trapper.cabal
app/: Main.hs
