cabal-version: 2.2
name: trapper
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/andrewthad/trapper#readme>
homepage: https://github.com/andrewthad/trapper#readme
bug-reports: https://github.com/andrewthad/trapper/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/trapper

executable trapper
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.12 && <5
    , asn1-codec
    , network
    , bytestring
    , containers
    , primitive >= 0.6.4
    , aeson >= 1.4.1
    , text
    , ip
    , fast-logger
    , chronos >= 1.0.4
    , unordered-containers
  default-language: Haskell2010
