cabal-version: 2.2
name: trapper
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/andrewthad/trapper#readme>
homepage: https://github.com/andrewthad/trapper#readme
bug-reports: https://github.com/andrewthad/trapper/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/trapper

executable trapper
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      base >= 4.12 && <5
    , snmp ^>= 0.3.1
    , network ^>= 3.0.1.1
    , bytestring ^>= 0.10.8.2
    , containers ^>= 0.6.0.1
    , primitive ^>= 0.6.4
    , aeson ^>= 1.4.1
    , text
    , ip ^>= 1.5
    , fast-logger
    , chronos >= 1.0.4
    , unordered-containers ^>= 0.2.10
    , transformers ^>= 0.5.6.2
    , language-asn ^>= 0.1.1
  default-language: Haskell2010
